--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,10 +1,9 @@
 nelmio_cors:
-    defaults:
-        origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
-        expose_headers: ['Link']
-        max_age: 3600
-    paths:
-        '^/': null
+  defaults:
+    allow_origin: ['*']
+    allow_headers: ['*']
+    allow_methods: ['POST', 'GET', 'OPTIONS']
+    max_age: 3600
+  paths:
+    '^/':
+      allow_origin: ['*']
