--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,8 +1,8 @@
 nelmio_cors:
   defaults:
     allow_origin: ['*']
-    allow_headers: ['*']
-    allow_methods: ['POST', 'GET', 'OPTIONS']
+    allow_headers: ['Content-Type']
+    allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
     max_age: 3600
   paths:
     '^/':
